[FIX] styleline 에러 해결

--- a/_sass/addon/custom.scss
+++ b/_sass/addon/custom.scss
@@ -84,7 +84,7 @@
             color: var(--main-color);
             margin-right: 1rem;
 
-            &:before {
+            &::before {
               content: '#';
               margin-right: 0.1rem;
             }
